--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,12 @@
         "php": "^7.1.3",
         "bumbummen99/shoppingcart": "^2.8",
         "fideloper/proxy": "^4.0",
+        "laravel/cashier": "^9.3",
         "laravel/framework": "5.8.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "laravelcollective/html": "^5.4.0",
+        "league/flysystem-aws-s3-v3": "~1.0",
+        "stripe/stripe-php": "^6.29"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
